[gd_scene load_steps=3 format=3 uid="uid://b4re2n6xd3kut"]

[ext_resource type="Texture2D" uid="uid://c33r5h3lmki1p" path="res://logo.png" id="1_3l0bs"]
[ext_resource type="Script" path="res://Scripts/Menu_Inicial.gd" id="1_qqmn2"]

[node name="Node2D" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_qqmn2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
color = Color(0.631373, 0.231373, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -185.0
offset_top = -23.0
offset_right = 185.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 1
text = "ESC durante o jogo para voltar para a tela inicial
F11 para modo fullscreen
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="logo" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = 70.0
offset_right = 125.0
offset_bottom = 283.0
grow_horizontal = 2
texture = ExtResource("1_3l0bs")
stretch_mode = 2

[node name="Button" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -171.0
offset_top = -133.0
offset_right = -81.0
offset_bottom = -75.0
grow_horizontal = 0
grow_vertical = 0
text = "Jogar!"

[node name="varsContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 126.0
offset_top = -353.0
offset_right = 354.0
offset_bottom = 316.0
grow_vertical = 2

[node name="altura" type="Control" parent="varsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="varsContainer/altura"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Altura da fase"

[node name="inputAltura" type="LineEdit" parent="varsContainer/altura"]
layout_mode = 0
offset_top = 30.0
offset_right = 67.0625
offset_bottom = 61.0
text = "100"
placeholder_text = "100"

[node name="largura" type="Control" parent="varsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="varsContainer/largura"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Largura da fase"

[node name="inputLargura" type="LineEdit" parent="varsContainer/largura"]
layout_mode = 0
offset_left = 1.0
offset_top = 31.0
offset_right = 68.0625
offset_bottom = 62.0
text = "100"
placeholder_text = "100"

[node name="nCaixas" type="Control" parent="varsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="varsContainer/nCaixas"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 23.0
text = "Número de caixas:
"

[node name="inputCaixas" type="LineEdit" parent="varsContainer/nCaixas"]
layout_mode = 0
offset_top = 36.0
offset_right = 67.0625
offset_bottom = 67.0
text = "12"
placeholder_text = "12"

[node name="nBolas" type="Control" parent="varsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="varsContainer/nBolas"]
layout_mode = 0
offset_right = 138.0
offset_bottom = 23.0
text = "Número de bolas:
"

[node name="inputBolas" type="LineEdit" parent="varsContainer/nBolas"]
layout_mode = 0
offset_top = 36.0
offset_right = 67.0625
offset_bottom = 67.0
text = "150"
placeholder_text = "150"

[node name="staRecover" type="Control" parent="varsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="varsContainer/staRecover"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 23.0
text = "Velocidade de recuperação da sstamina:
"

[node name="inputStaRecover" type="LineEdit" parent="varsContainer/staRecover"]
layout_mode = 0
offset_top = 36.0
offset_right = 67.0625
offset_bottom = 67.0
text = "0.35"
placeholder_text = "500"

[node name="staUsage" type="Control" parent="varsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="varsContainer/staUsage"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Gasto de STA por correr:"

[node name="inputStaUsage" type="LineEdit" parent="varsContainer/staUsage"]
layout_mode = 0
offset_left = 1.0
offset_top = 27.0
offset_right = 68.0625
offset_bottom = 58.0
text = "1"

[node name="walkingSPEED" type="Control" parent="varsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="varsContainer/walkingSPEED"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Velocidade de andar:"

[node name="inputWalkingSPEED" type="LineEdit" parent="varsContainer/walkingSPEED"]
layout_mode = 0
offset_left = 1.0
offset_top = 30.0
offset_right = 68.0625
offset_bottom = 61.0
text = "5.0"

[node name="runningSPEED" type="Control" parent="varsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="varsContainer/runningSPEED"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Velocidade correndo:"

[node name="inputRunningSPEED" type="LineEdit" parent="varsContainer/runningSPEED"]
layout_mode = 0
offset_left = -2.0
offset_top = 38.0
offset_right = 65.0625
offset_bottom = 69.0
text = "10.0"

[node name="balancingMode" type="CheckBox" parent="."]
offset_left = 433.0
offset_top = 530.0
offset_right = 592.0
offset_bottom = 561.0
text = "Balancing mode?"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="varsContainer/altura/inputAltura" to="." method="_on_input_altura_text_changed"]
[connection signal="text_changed" from="varsContainer/largura/inputLargura" to="." method="_on_input_largura_text_changed"]
[connection signal="text_changed" from="varsContainer/nCaixas/inputCaixas" to="." method="_on_input_caixas_text_changed"]
[connection signal="text_changed" from="varsContainer/nBolas/inputBolas" to="." method="_on_input_bolas_text_changed"]
[connection signal="text_changed" from="varsContainer/staRecover/inputStaRecover" to="." method="_on_input_sta_recover_text_changed"]
[connection signal="text_changed" from="varsContainer/staUsage/inputStaUsage" to="." method="_on_input_sta_usage_text_changed"]
[connection signal="text_changed" from="varsContainer/walkingSPEED/inputWalkingSPEED" to="." method="_on_input_walking_speed_text_changed"]
[connection signal="text_changed" from="varsContainer/runningSPEED/inputRunningSPEED" to="." method="_on_input_running_speed_text_changed"]
[connection signal="toggled" from="balancingMode" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="balancingMode" to="." method="_on_balancing_mode_toggled"]
